<resources>
    <string name="app_name">Book_supplies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book supplies for Universities</string>
    <string name="nav_header_subtitle">presh.keyz123@gmai..com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="nav_options_communicate">Communicate</string>

    <string name="nav_options_department_lists">Department Lists</string>
    <string name="nav_options_activity">Activity</string>
    <string name="nav_options_tasks">Tasks</string>
    <string name="nav_options_settings">Settings</string>
    <string name="nav_options_share">Share</string>
    <string name="nav_options_about">About</string>
    <string name="nav_options_exit">Exit</string>

</resources>